Fixed Background image, now visible with buttons on top

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,4 @@
-.Server{
-    background-color: lightcyan;
-}
+
 .item_box{
     text-align: center;
 }
@@ -22,3 +20,4 @@
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
 }
+
